dodanie nowych metod qa (bandit, vulture)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,5 +19,8 @@ static_analysis:
     - pylint setup.py
     - pylint graphflow
     - pylint tests
+    - vulture graphflow
+    - vulture tests
+    - bandit graphflow -lll
   only:
     - merge_requests
