--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,6 +38,8 @@ static_analysis:
 deploy_registry:
   image: docker:stable
   stage: deploy
+  before_script:
+    - docker info
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker build -t $CI_REGISTRY/io-2019-networks/graph-flow/image:latest .
